# orchestra

./: .conductor.db  .gitignore  CLAUDE.md  PLAN.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  script-01KMZVW5G1HDBC4PT3B6RCV4WA.out  script-01KMZW1F2QEZR5M0M9F033VM4X.out  script-01KMZXD6CZ3C92YJTS48876DSG.out  script-01KMZXE1AQZ6W40941TJ4TW7NH.out  script-01KMZXF5EAWZPEDM3245X46EQF.out  script-01KMZXMHD5EA2BFW23JT0X6HPG.out  script-01KMZXMKZNWDJ71DBDYMB0E8ZT.out  script-01KMZY2HCZJ7QSYX1E3AZ5TGGJ.out  script-01KMZY4A26RE2JVTCP7569V3TB.out  script-01KMZYNN57HB42VMD52ZX78BTV.out  script-01KMZZ7ESVSGSQNFZZBF5PWAGB.out  script-01KMZZW7K033ZWM542VD0TDM2V.out  script-01KN0045BESF1NEXN6S54TCC3F.out  script-01KN006ZNCNJE911EHVGZC4H9S.out  script-01KN007023Y0MYKZ8PHXND7TDP.out  script-01KN0071Y22QB9CQ7ASZGHPH4K.out  script-01KN00BD3R8F4MRQ4MVDFXFMWC.out  script-01KN00EDNCMKMTKKYT4HPKZTRN.out  script-01KN00EE29PA4N6V3N1X89FDBW.out  script-01KN00EHBH3WXD41E7V01PDTA5.out  script-01KN00M5VPDP5CBR2WPYJV9A1D.out  script-01KN01H6YSX6SWDK5H4Z9HC8KE.out  script-01KN01HEFN8ZZ1YPA89AS9DAWN.out  script-01KN01KRCWDWXD0VFQS1QD0H2T.out  script-01KN01N3C2Z16GXB0RNTRGRX2Y.out  script-01KN01N3Z6V6C2SMKJYV5BWRY6.out  script-01KN01RFCF09FAKZA1M5ACVBMJ.out  script-01KN01VKF8BCDFRJDM2BK7V2RH.out  script-01KN021N76ERQ1M2CNNMHVHV09.out  script-01KN025NWKQNRY9829VRZBVCFE.out  script-01KN025P2X6D2FTNR5G1397FCR.out  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/orchestra-core/: Cargo.toml
src-tauri/orchestra-core/src/: cover.rs  lib.rs  media_session.rs  organizer.rs
src-tauri/orchestra-tui/: Cargo.toml
src-tauri/orchestra-tui/src/: app.rs  (+4 more)
src-tauri/src/: error.rs  lib.rs  main.rs  media_session.rs
(+184 files in other folders)
