[package]
name = "music-sync"
version = "0.1.0"
edition = "2021"

[lib]
name = "music_sync_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "music-sync"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
lofty = "0.22"
blake3 = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
plist = "1"
unicode-normalization = "0.1.25"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
