[package]
name = "orchestra-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
blake3 = "1"
walkdir = "2"
lofty = "0.22"
base64 = "0.22"
glob = "0.3"
plist = "1"
unicode-normalization = "0.1.25"

[dev-dependencies]
tempfile = "3"
